<resources>
    <string name="app_name">Injaaz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">No account yet? Sign Up</string>
    <string name="already_has_account">You already have an account? Sign In</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="sign_up_button_text">Signup</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_me">Me</string>
</resources>